Bump java version to 17 (#261)
* add jvmArgs option

* Bump java version to 17

* Fix illegal access error

Co-authored-by: Petur.Thorsteinsson <Petur.Bjorn.Thorsteinsson@dnb.no>